worked on userpannel > fixed footer-covering-content bug and added a few lines of text

--- a/css/userPannel.css
+++ b/css/userPannel.css
@@ -112,7 +112,9 @@ body {
 		height: 36px;
 }
 /* footer */
-
+.bottom { /* purpose of this div is to extend content height so footer doesn't cover it */
+		padding-bottom: 10px;
+}
 #footer {
 		background-color: #414141;
 		border-top: 3px solid rgb(183, 74, 2);
